<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright Cyril M. Hansen 2013
  Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
  
  https://github.com/cyrilmhansen/DIYGlslLwp
-->
<resources>

    <string name="app_name">DIY GLSL LWP</string>
    <string name="title_activity_settings">DIY Glsl Live Wallpaper Settings</string>
    <string name="title_app">DIY Glsl Live Wallpaper and Gallery</string>
    <string name="previous_page">Previous</string>
    <string name="next_page">Next</string>
    <string name="download">Download</string>
    <string name="viewFS">FullScreen</string>
    <string name="edit">Edit</string>
    <string name="moveToShader">Move to Shader #</string>
    <string name="moveToPage">Move to Page #</string>
    <string name="enableTouch">Enable touch</string>
    <string name="displayFPSLWP">Display FPS stats in Wallpaper mode</string>
    <string name="reducedResolution">Improve Performance by reducing resolution</string>
    <string name="reductionFactor">Resolution reduction factor</string>
    <string name="timeDithering">Improve reactivity by reducing framerate</string>
    <string name="timeDitheringFactor">Framerate reduction factor</string>
    <string name="networkRequired">Network connection required. Exiting&#8230;</string>
    <string name="loadingStatus">Loading&#8230;</string>
    <string name="inputShaderRef">Input shader reference</string>
    <string name="inputGalleryPage">Input target gallery page number</string>
    <string name="exiting">Exiting</string>
    <string name="loadingGalleryPage">Loading Page #</string>
    <string name="loadingShader">Loading Shader #</string>
    <string name="manualSelectLWP">Manual action required - Select DIY Glsl LWP</string>
    <string name="errorLaunchingLWPSelector">Error while launching wallpaper selector - please set wallpaper manually</string>
    <string name="unableAccessExtStorage">Unable to access external storage (SD)</string>
    <string name="cancel">Cancel</string>
    <string name="setAsLWP">Set as Wallpaper</string>
    <string name="preferencesForLWP">Preferences for Wallpaper</string>
    <string name="aPropos">About this app</string>
    <string name="quit">Quit App</string>
    <string name="ok">OK</string>
    <string name="openGLRequirementsFailure">OpenGL 2 ES required</string>
    <string name="diyglsllwp_lwp_desc">Live wallpaper using custom fragment shader on external storage</string>
    <string name="timeLoop">Time Loop</string>
    <string name="forceMediumPrecision">Force use of medium precision floats</string>
    <string name="processingShader">Processing shader...</string>
    <string name="speedFactor">Variable speed</string>
    
</resources>