<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright Cyril M. Hansen 2013
  Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
  
  https://github.com/cyrilmhansen/DIYGlslLwp
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/prefsLWP"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferencesForLWP">
    </item>
    <item
        android:id="@+id/goToShader"
        android:title="@string/moveToShader"/>
    <item
        android:id="@+id/goToPage"
        android:title="@string/moveToPage"/>
    <item
        android:id="@+id/aPropos"
        android:title="@string/aPropos"/>
    <item
        android:id="@+id/quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/quit"/>

</menu>
