<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="160px"
        android:layout_height="120px"
        android:layout_marginLeft="4px"
        android:layout_marginRight="10px"
        android:layout_marginTop="4px"
        android:src="@drawable/ic_diyglsllwp" >
    </ImageView>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+id/label" >
        android:textSize="20sp" >        
    </TextView>

    <Button
        android:id="@+id/buttonViewFS"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/viewFS" />

    <Button
        android:id="@+id/buttonEdit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/edit" />

    <Button
        android:id="@+id/buttonDownload"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/download" />

</LinearLayout>